# Blog-on-Flask

./: .gitignore  README.md  config.py  manage.py  pyproject.toml  pyvenv.cfg  runner.py
Scripts/: activate  activate.bat  activate.fish  activate.xsh
app/: __init__.py  db_add_content.py  forms.py  handlers.py  main.py  models.py  utils.py  views.py
app/commands/: __init__.py  create_superuser.py
app/static/css/: admin.css  font.css  footer.css  header.css  main.css  new-post.css  post-page.css  post.css  sign.css  user-page.css
app/static/js/: admin.js  closeFlash.js  getPost.js  header.js  headerMenu.js  main.js  newPost.js  postPage.js
app/templates/: admin.html  footer.html  header.html  login.html  main.html  main_page.html  new-post.html  post-page.html  post.html  prev-post-template.html  register.html  sign_in.html  sign_up.html  user-page.html  user_page.html
migrations/versions/: a1501a1a6ef2_.py  fb03c3ab0993_.py
