[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Adam Khagar <adamhagarov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.1"
Flask-Script = "^2.0.6"
Flask-Migrate = "^2.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
